# barehttp

./: .gitignore  Cargo.toml  LICENSE-MIT  README.md  clippy.toml  rustfmt.toml
.github/workflows/: ci.yml  update-readme.yml
examples/: basic.rs  configuration.rs  custom_headers.rs  error_handling.rs
scripts/: update_readme.rs
src/: body.rs  client.rs  config.rs  cookie_jar.rs  headers.rs  lib.rs  method.rs  request.rs  request_builder.rs  response.rs
src/client/: http_client.rs  mod.rs  policy.rs  request_executor.rs
src/client/tests/: mod.rs  test_http_client.rs  test_policy.rs
src/dns/: adapter.rs  mod.rs  resolver.rs
src/dns/os/: macos.rs  mod.rs  unix.rs  windows.rs
src/error/: dns.rs  mod.rs  parse.rs  socket.rs
src/parser/: chunked.rs  cookie.rs  framing.rs  header.rs  headers.rs  http.rs  message.rs  mod.rs  response_reader.rs  status.rs  uri.rs  version.rs
src/parser/tests/: chunked_encoding.rs  cookie.rs  field_syntax.rs  framing.rs  incomplete_messages.rs  message_body.rs  message_parsing.rs  mod.rs  response_reading.rs  rfc9112_compliance_validation.rs  rfc9112_missing_requirements.rs  rfc9112_must_requirements.rs  rfc9112_phase1_phase2.rs  rfc9112_phase3_phase4.rs  security.rs  status_line.rs  uri_parsing.rs
src/socket/: adapter.rs  blocking.rs  flags.rs  mod.rs
src/socket/os/: mac.rs  macos.rs  mod.rs  unix.rs  windows.rs
src/transport/: connection.rs  connection_state.rs  connector.rs  mod.rs  pool.rs
src/transport/tests/: mod.rs  test_connection.rs  test_connection_state.rs  test_connector.rs
src/util/: mod.rs  network.rs
tests/: api_adapters_test.rs  api_body_test.rs  api_config_test.rs  api_convenience_functions_test.rs  api_error_test.rs  api_headers_test.rs  api_http_client_test.rs  api_method_test.rs  api_query_params_test.rs  api_request_builder_test.rs  api_request_test.rs  api_response_test.rs  api_status_test.rs  api_version_test.rs  config_test.rs  httpbin_test.rs  integration_test.rs  method_coverage_test.rs
